jellyfin/00-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: jellyfin
  name: jellyfin
  namespace: media
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      containers:
      - env:
        - name: PUID
          value: "1000"
        - name: PGID
          value: "100"
        - name: TZ
          value: Europe/Amsterdam
        securityContext:
          privileged: true # Container must run as privileged inside of the pod, required for hardware acceleration
        image: ghcr.io/linuxserver/jellyfin
        imagePullPolicy: IfNotPresent
        name: jellyfin
        ports:
        - containerPort: 8096
          name: http-tcp
          protocol: TCP
        - containerPort: 8920
          name: https-tcp
          protocol: TCP
        - containerPort: 1900
          name: dlna-udp
          protocol: UDP
        - containerPort: 7359
          name: discovery-udp
          protocol: UDP
        resources: {}
        stdin: true
        tty: true
        volumeMounts:
        - name: config
          mountPath: /config
        - name: data
          mountPath: /data/media
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      volumes:
      - name: config
        nfs:
          server: ${NFS_SERVER}
          path: /volume1/kubernetes/config/jellyfin
      - name: data
        nfs:
          server: ${NFS_SERVER}
          path: /volume1/data/media
