jellyfin/02-ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin-tcp-ingress
  namespace: media
spec:
  entryPoints:
  - websecure
  - web
  routes:
  - match: Host(`jellyfin.${DOMAIN}`)
    kind: Rule
    services:
    - kind: Service
      name: jellyfin-tcp
      port: http-tcp
